# payment_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_api.sh
alembic/: env.py
alembic/versions/: 2026-04-09_1811_9146283d37c1_initial_tables.py
app/: config.py  dependencies.py  main.py  run_consumer.py  schemas.py
app/api/v1/: payments.py
app/consumers/: payment_consumer.py
app/db/: models.py  session.py
app/repositories/: outbox_repository.py  payment_repository.py
app/services/: outbox_service.py  payment_service.py
app/utils/: payment_emulator.py  webhook.py
