[project]
name = "payment-service"
version = "0.1.0"
description = "Async payment processing service"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "aio-pika>=9.6.2",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.24",
    "sqlalchemy>=2.0.49",
]
